--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,6 +1,12 @@
 .appContainer {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  background-color: #f8f9fa; 
+  width: 100%;
+  height: 100%;
+}
+.mainContent {
+  height: calc(100% - 140px);
+  margin:auto;
+  width: 60%;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  padding: 3rem 3rem 0rem 3rem;
 }
