--- a/client/src/components/RichTextEditor/styles.css
+++ b/client/src/components/RichTextEditor/styles.css
@@ -66,7 +66,7 @@
   outline: 0;
   overflow: auto;
   min-height: 300px;
-  width: 100%;
+  width: calc(100% - 26px);
   border: 1px solid #e0e0e0;
   border-top: none;
   border-radius: 0 0 8px 8px;
