--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: dark;
+  color-scheme: light;
   color: #0a1c33;
-  background-color: #242424;
+  background-color: #f8f9ff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -43,6 +43,7 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #f8f9ff;
 }
 
 h1 {
@@ -57,9 +58,9 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #fff;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.25s;
 }
 button:hover {
   border-color: #646cff;
