--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,5 +1,12 @@
 .homeContainer {
   padding: 1rem 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.noteListWrapper {
+  flex: 1;
+  overflow: hidden;
 }
 
 .homeHeader {
